--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.5.1.RELEASE'
+        springBootVersion = '1.5.2.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -90,14 +90,15 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     // end::actuator[]
     compile("org.springframework.boot:spring-boot-starter-data-rest")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa") {
-    	exclude group: "org.hibernate", module: "hibernate-entitymanager"
-    }
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    // {
+    	// exclude group: "org.hibernate", module: "hibernate-entitymanager"
+    // }
     
     compile("org.springframework.boot:spring-boot-starter-batch")
     compile("org.springframework.boot:spring-boot-starter-integration")
     
-    compile("org.eclipse.persistence:org.eclipse.persistence.jpa:2.6.4")
+    // compile("org.eclipse.persistence:org.eclipse.persistence.jpa:2.6.4")
     
     compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("org.springframework.boot:spring-boot-starter-security")
