--- a/src/main/resources/application.yaml.template
+++ b/src/main/resources/application.yaml.template
@@ -141,3 +141,11 @@ myapp:
     templateRoot: e:\nutchBuilderRoot\templateRoot
     buildRoot: e:\nutchBuilderRoot\buildRoot
     unjarRoot: C:\Users\admin\AppData\Local\Temp
+    hbaseRestHost: s110.host.name
+    hbaseRestPort: 8080
+    hbaseRestProtocol: http
+    hdfsHost: s110.host.name
+    hadoopExecutable: G:/hadoop-2.6.2/bin/hadoop.cmd
+    hdfsPort: 
+    antExec: G:/apache-ant-1.9.6/bin/ant.bat
+    tProjectRoot: e:/nutchBuilderRoot/buildRoot/a
