--- a/build.gradle
+++ b/build.gradle
@@ -93,7 +93,7 @@ dependencies {
     // tag::actuator[]
     compile("org.springframework.boot:spring-boot-starter-actuator")
     // end::actuator[]
-    compile("org.springframework.boot:spring-boot-starter-data-rest")
+	// compile("org.springframework.boot:spring-boot-starter-data-rest")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     // {
     	// exclude group: "org.hibernate", module: "hibernate-entitymanager"
@@ -123,7 +123,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml
 	compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.8.7'
 	
-	compile 'org.springframework.data:spring-data-rest-hal-browser'
+	//compile 'org.springframework.data:spring-data-rest-hal-browser'
 	
 	// https://mvnrepository.com/artifact/io.katharsis/katharsis-core
 	compile group: 'io.katharsis', name: 'katharsis-core', version: '3.0.0'
