--- a/build.gradle
+++ b/build.gradle
@@ -136,7 +136,9 @@ dependencies {
 	
 	// https://mvnrepository.com/artifact/io.zipkin.brave/brave-apache-http-interceptors
 	compile group: 'io.zipkin.brave', name: 'brave-apache-http-interceptors', version: '4.0.6'
-	
+    
+    // https://mvnrepository.com/artifact/com.auth0/java-jwt
+	compile group: 'com.auth0', name: 'java-jwt', version: '3.1.0'
 	
 	// https://mvnrepository.com/artifact/org.apache.nutch/nutch
 	// compile group: 'org.apache.nutch', name: 'nutch', version: '2.3.1'
