--- a/src/main/resources/application.yaml.template
+++ b/src/main/resources/application.yaml.template
@@ -150,6 +150,10 @@ myapp:
     antExec: G:/apache-ant-1.9.6/bin/ant.bat
     tProjectRoot: e:/nutchBuilderRoot/buildRoot/a
     zkQuoram: s62.host.name,s63.host.name,s64.host.name,s65.host.name,s66.host.name
+    jwtConfig:
+      file: d:\jwtsecret.txt
+      issuer: jianglibo
+      lasting: 1800000
 katharsis:
     resourcePackage: io.katharsis.example.springboot.simple.domain
     domainName: http://localhost:8080
