--- a/build.gradle
+++ b/build.gradle
@@ -99,15 +99,15 @@ dependencies {
     	// exclude group: "org.hibernate", module: "hibernate-entitymanager"
     // }
     
-    compile("org.springframework.boot:spring-boot-starter-batch")
-    compile("org.springframework.boot:spring-boot-starter-integration")
+    // compile("org.springframework.boot:spring-boot-starter-batch")
+    // compile("org.springframework.boot:spring-boot-starter-integration")
     
     // compile("org.eclipse.persistence:org.eclipse.persistence.jpa:2.6.4")
     
     compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("org.springframework.boot:spring-boot-starter-security")
-    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
-    compile("org.springframework.security.oauth:spring-security-oauth2:2.0.12.RELEASE")
+	// compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    // compile("org.springframework.security.oauth:spring-security-oauth2:2.0.12.RELEASE")
     compile("org.springframework.boot:spring-boot-devtools")
 
     // compile("com.h2database:h2")
