unified the error code

--- a/build.gradle
+++ b/build.gradle
@@ -208,7 +208,7 @@ task installSystemd(dependsOn: bootRepackage) {
     ssh.run {
       session(remotes.nutchbuilderweb) {
         // execute 'systemctl daemon-reload'
-        execute 'systemctl stop nutchbuilder'
+        execute 'systemctl stop nutchbuilder', ignoreError: true
         execute "rm -f ${serverJarName}.bak", ignoreError: true
         execute "mv $serverJarName ${serverJarName}.bak", ignoreError: true
         execute "mv $serverJarNameNew $serverJarName", ignoreError: true
@@ -216,7 +216,7 @@ task installSystemd(dependsOn: bootRepackage) {
 
         put from: 'systemd/nutchbuilder.service', into: '/etc/systemd/system/'
         put from: clientJarName , into: serverJarName
-        execute 'useradd nutchbuilder', ignoreError: true
+        execute 'useradd -s /sbin/nologin nutchbuilder', ignoreError: true
         execute 'chown -R nutchbuilder:nutchbuilder /var/nutchbuilder'
         execute 'chmod +x /var/nutchbuilder/nutchbuilder.jar'
         execute 'systemctl enable nutchbuilder.service'
